added cancellation logic
